--- a/app/views/cosmetics-general/ingredient-2a-b-enter-ingredient.html
+++ b/app/views/cosmetics-general/ingredient-2a-b-enter-ingredient.html
@@ -93,49 +93,49 @@
                           <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="range-1" name="range" type="radio" value="range-1">
                             <label class="govuk-label govuk-radios__label" for="range-1">
-                              above <span class="govuk-!-font-weight-bold">75&percnt;</span> <abbr class="govuk-!-font-size-16" title="Weight by weight">w/w</abbr> up to <span class="govuk-!-font-weight-bold">100&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
+                              Above <span class="govuk-!-font-weight-bold">75&percnt;</span> <abbr class="govuk-!-font-size-16" title="Weight by weight">w/w</abbr> up to <span class="govuk-!-font-weight-bold">100&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
                             </label>
                           </div>
                           <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="range-2" name="range" type="radio" value="range-2">
                             <label class="govuk-label govuk-radios__label" for="range-2">
-                              above <span class="govuk-!-font-weight-bold">50&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr> up to <span class="govuk-!-font-weight-bold">75&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
+                              Above <span class="govuk-!-font-weight-bold">50&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr> up to <span class="govuk-!-font-weight-bold">75&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
                             </label>
                           </div>
                           <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="range-3" name="range" type="radio" value="range-3">
                             <label class="govuk-label govuk-radios__label" for="range-3">
-                              above <span class="govuk-!-font-weight-bold">25&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr> up to <span class="govuk-!-font-weight-bold">50&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
+                              Above <span class="govuk-!-font-weight-bold">25&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr> up to <span class="govuk-!-font-weight-bold">50&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
                             </label>
                           </div>
                           <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="range-4" name="range" type="radio" value="range-4">
                             <label class="govuk-label govuk-radios__label" for="range-4">
-                              above <span class="govuk-!-font-weight-bold">10&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr> up to <span class="govuk-!-font-weight-bold">25&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
+                              Above <span class="govuk-!-font-weight-bold">10&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr> up to <span class="govuk-!-font-weight-bold">25&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
                             </label>
                           </div>
                           <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="range-5" name="range" type="radio" value="range-5">
                             <label class="govuk-label govuk-radios__label" for="range-5">
-                              above <span class="govuk-!-font-weight-bold">5&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr> up to <span class="govuk-!-font-weight-bold">10&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
+                              Above <span class="govuk-!-font-weight-bold">5&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr> up to <span class="govuk-!-font-weight-bold">10&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
                             </label>
                           </div>
                           <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="range-6" name="range" type="radio" value="range-6">
                             <label class="govuk-label govuk-radios__label" for="range-6">
-                              above <span class="govuk-!-font-weight-bold">1&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr> up to <span class="govuk-!-font-weight-bold">5&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
+                              Above <span class="govuk-!-font-weight-bold">1&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr> up to <span class="govuk-!-font-weight-bold">5&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
                             </label>
                           </div>
                           <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="range-7" name="range" type="radio" value="range-7">
                             <label class="govuk-label govuk-radios__label" for="range-7">
-                              above <span class="govuk-!-font-weight-bold">0.1&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr> up to <span class="govuk-!-font-weight-bold">1&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
+                              Above <span class="govuk-!-font-weight-bold">0.1&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr> up to <span class="govuk-!-font-weight-bold">1&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
                             </label>
                           </div>
                           <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="range-8" name="range" type="radio" value="range-8">
                             <label class="govuk-label govuk-radios__label" for="range-8">
-                              up to and including <span class="govuk-!-font-weight-bold">0.1&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
+                              Up to and including <span class="govuk-!-font-weight-bold">0.1&percnt;</span> <abbr class="govuk-!-font-size-16">w/w</abbr>
                             </label>
                           </div>
                         </div>
