wip ingredients search pages and menu

--- a/app/views/product-case-testing/success-product-added.html
+++ b/app/views/product-case-testing/success-product-added.html
@@ -83,7 +83,7 @@
             </legend>
 
             <div class="govuk-hint opss-max-width-two-thirds" id="which-image-hint">
-              The default image should provide the clearest representation of the product and will be used as the thumbnail image for product record.
+              The default image should provide the clearest representation of the product and will be used as the thumbnail image for the product record.
             </div>  
 
             <span id="defaultimg-error" class="govuk-error-message">
