--- a/app/views/cosmetics-general/tasks/pg-delete-draft.html
+++ b/app/views/cosmetics-general/tasks/pg-delete-draft.html
@@ -18,7 +18,7 @@
     <div class="govuk-grid-column-full">
 
       <form action="pg-delete-draft-success" novalidate>
-        <div class="govuk-form-group">
+        <!--div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="delete-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
@@ -48,12 +48,27 @@
             </div>
 
           </fieldset>
-        </div>
+        </div-->
+
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset" aria-describedby="delete-hint">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <h1 class="govuk-fieldset__heading">Do you want to delete this draft?</h1>
+            </legend>
+            <div id="delete-hint" class="govuk-hint">The [product name here] product notification draft will be deleted.</div>
+            <div class="govuk-checkboxes">
+                    <div class="govuk-checkboxes__item">
+                      <input class="govuk-checkboxes__input" id="yes" name="yes" type="checkbox" value="yes">
+                      <label class="govuk-label govuk-checkboxes__label" for="yes">Yes</label>
+                    </div>
+             </div>
+          </fieldset>
+          </div>
 
         <div class="govuk-button-group">
           <button class="govuk-button ">Delete</button>
 
-          <!--a href="#" class="govuk-link govuk-link--no-visited-state">Cancel</a-->
+          <a href="#" class="govuk-link govuk-link--no-visited-state">Cancel</a>
         </div>
 
       </form>
