--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -243,4 +243,26 @@
     </div>
 </div>
 
+
+
+
+
+On div "govuk-grid-row opss-full-height govuk-!-margin-top-7 govuk-!-padding-top-9" remove "govuk-!-margin-top-7 govuk-!-padding-top-9" and add "opss-desktop-min-height--s" to the div that wraps the H1 title.
+
+On cosmetic products search remove the work "search" from the hidden button text on the search form. 
+
+The cosmetics product search page now features a H1 title with seperate label for the search input field. The input search field now has a full width class.
+
+Add the hidden "Skip to results" jump-to link.
+
+Change the class "govuk-fieldset__legend--m" in the filters title to "govuk-fieldset__legend--s" .
+
+The results summary statement is now in a full width div. And the HTML structure and wording has changed.
+
+Class "opss-desktop-min-height--s" now features in the top section of the pages.
+
+On the ingredient page (and cosmetic products) the input field submit and the filters submit should submit the status of all form elements. i.e, both search and filters forms.
+
+Get latest _opss-shared.scss
+
 {% endblock %}
