ingredients pages - different states

--- a/app/views/cosmetics-general/ingredient-2c-removed-confirmation.html
+++ b/app/views/cosmetics-general/ingredient-2c-removed-confirmation.html
@@ -15,10 +15,9 @@
     </h2>
   </div>
   <div class="govuk-notification-banner__content">
-    <h1 class="govuk-notification-banner__heading"> <!-- ******* note the H1 tag ********* -->
+    <h1 class="govuk-notification-banner__heading"> 
       The ingredient was removed
     </h1>
-    <p class="govuk-body">The ingredient was successfully removed from this product<!-- or Item -->.</p>
   </div>
 </div>  
 
