--- a/app/views/cosmetics-general/ingredients-ingredients-search.html
+++ b/app/views/cosmetics-general/ingredients-ingredients-search.html
@@ -397,15 +397,13 @@
                     </tr>
                     <tr class="govuk-table__row">
                         <th headers="item-01" id="ingredients-01" class="govuk-visually-hidden">
-                          Matching ingredients
+                          Matches
                         </th>
                         <td headers="item-01 ingredients-01" colspan="3" class="govuk-table__cell">
                             <span class="govuk-!-font-size-14">Ingredient matches: </span>
                             <span class="govuk-!-font-size-14"><mark>Consectetur lorem etilee</mark>. </span> 
                             <span class="govuk-!-font-size-14"><mark>Consectetur lorem etilee</mark>. </span>
                             <span class="govuk-!-font-size-14"><mark>Consectetur lorem etilee</mark>. </span>
-
-                            <!-- we duplicate the results here if ingredient used more than once in a multi-kit item -->
                         </td>
                       </tr>                    
                     </tbody>
@@ -435,7 +433,7 @@
                     </tr>
                     <tr class="govuk-table__row">
                         <th headers="item-02" id="ingredients-02" class="govuk-visually-hidden">
-                          Matching ingredients
+                          Matches
                         </th>
                         <td headers="item-02 ingredients-02" colspan="3" class="govuk-table__cell">
                             <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -469,7 +467,7 @@
                     </tr>
                     <tr class="govuk-table__row">
                         <th headers="item-03" id="ingredients-03" class="govuk-visually-hidden">
-                          Matching ingredients
+                          Matches
                         </th>
                         <td headers="item-03 ingredients-03" colspan="3" class="govuk-table__cell">
                             <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -503,7 +501,7 @@
                     </tr>
                     <tr class="govuk-table__row">
                         <th headers="item-03" id="ingredients-03" class="govuk-visually-hidden">
-                          Matching ingredients
+                          Matches
                         </th>
                         <td headers="item-03 ingredients-03" colspan="3" class="govuk-table__cell">
                             <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -537,7 +535,7 @@
                     </tr>
                     <tr class="govuk-table__row">
                         <th headers="item-04" id="ingredients-04" class="govuk-visually-hidden">
-                          Matching ingredients
+                          Matches
                         </th>
                         <td headers="item-04 ingredients-04" colspan="3" class="govuk-table__cell">
                             <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -571,7 +569,7 @@
                     </tr>
                     <tr class="govuk-table__row">
                         <th headers="item-05" id="ingredients-05" class="govuk-visually-hidden">
-                          Matching ingredients
+                          Matches
                         </th>
                         <td headers="item-05 ingredients-05" colspan="3" class="govuk-table__cell">
                             <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -609,7 +607,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-06" id="ingredients-06" class="govuk-visually-hidden">
-                              Matching ingredients
+                              Matches
                             </th>
                             <td headers="item-06 ingredients-06" colspan="3" class="govuk-table__cell">
                                 <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -643,7 +641,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-07" id="ingredients-07" class="govuk-visually-hidden">
-                              Matching ingredients
+                              Matches
                             </th>
                             <td headers="item-07 ingredients-07" colspan="3" class="govuk-table__cell">
                                 <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -677,7 +675,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-08" id="ingredients-08" class="govuk-visually-hidden">
-                              Matching ingredients
+                              Matches
                             </th>
                             <td headers="item-08 ingredients-08" colspan="3" class="govuk-table__cell">
                                 <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -711,7 +709,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-09" id="ingredients-09" class="govuk-visually-hidden">
-                              Matching ingredients
+                              Matches
                             </th>
                             <td headers="item-09 ingredients-09" colspan="3" class="govuk-table__cell">
                                 <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -745,7 +743,7 @@
                         </tr>
                         <tr class="govuk-table__row">
                             <th headers="item-10" id="ingredients-10" class="govuk-visually-hidden">
-                              Matching ingredients
+                              Matches
                             </th>
                             <td headers="item-10 ingredients-10" colspan="3" class="govuk-table__cell">
                                 <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -783,7 +781,7 @@
                             </tr>
                             <tr class="govuk-table__row">
                                 <th headers="item-11" id="ingredients-11" class="govuk-visually-hidden">
-                                  Matching ingredients
+                                  Matches
                                 </th>
                                 <td headers="item-11 ingredients-11" colspan="3" class="govuk-table__cell">
                                     <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -817,7 +815,7 @@
                             </tr>
                             <tr class="govuk-table__row">
                                 <th headers="item-12" id="ingredients-12" class="govuk-visually-hidden">
-                                  Matching ingredients
+                                  Matches
                                 </th>
                                 <td headers="item-12 ingredients-12" colspan="3" class="govuk-table__cell">
                                     <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -851,7 +849,7 @@
                             </tr>
                             <tr class="govuk-table__row">
                                 <th headers="item-13" id="ingredients-13" class="govuk-visually-hidden">
-                                  Matching ingredients
+                                  Matches
                                 </th>
                                 <td headers="item-13 ingredients-13" colspan="3" class="govuk-table__cell">
                                     <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -885,7 +883,7 @@
                             </tr>
                             <tr class="govuk-table__row">
                                 <th headers="item-14" id="ingredients-14" class="govuk-visually-hidden">
-                                  Matching ingredients
+                                  Matches
                                 </th>
                                 <td headers="item-14 ingredients-14" colspan="3" class="govuk-table__cell">
                                     <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -923,7 +921,7 @@
                                 </tr>
                                 <tr class="govuk-table__row">
                                     <th headers="item-15" id="ingredients-15" class="govuk-visually-hidden">
-                                      Matching ingredients
+                                      Matches
                                     </th>
                                     <td headers="item-15 ingredients-15" colspan="3" class="govuk-table__cell">
                                         <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -957,7 +955,7 @@
                                 </tr>
                                 <tr class="govuk-table__row">
                                     <th headers="item-16" id="ingredients-16" class="govuk-visually-hidden">
-                                      Matching ingredients
+                                      Matches
                                     </th>
                                     <td headers="item-16 ingredients-16" colspan="3" class="govuk-table__cell">
                                         <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -991,7 +989,7 @@
                                 </tr>
                                 <tr class="govuk-table__row">
                                     <th headers="item-17" id="ingredients-17" class="govuk-visually-hidden">
-                                      Matching ingredients
+                                      Matches
                                     </th>
                                     <td headers="item-17 ingredients-17" colspan="3" class="govuk-table__cell">
                                         <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -1025,7 +1023,7 @@
                                 </tr>
                                 <tr class="govuk-table__row">
                                     <th headers="item-18" id="ingredients-18" class="govuk-visually-hidden">
-                                      Matching ingredients
+                                      Matches
                                     </th>
                                     <td headers="item-18 ingredients-18" colspan="3" class="govuk-table__cell">
                                         <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -1059,7 +1057,7 @@
                                 </tr>
                                 <tr class="govuk-table__row">
                                     <th headers="item-19" id="ingredients-19" class="govuk-visually-hidden">
-                                      Matching ingredients
+                                      Matches
                                     </th>
                                     <td headers="item-19 ingredients-19" colspan="3" class="govuk-table__cell">
                                         <span class="govuk-!-font-size-14">Ingredient matches: </span>
@@ -1092,7 +1090,7 @@
                                     </tr>
                                     <tr class="govuk-table__row">
                                         <th headers="item-20" id="ingredients-20" class="govuk-visually-hidden">
-                                          Matching ingredients
+                                          Matches
                                         </th>
                                         <td headers="item-20 ingredients-20" colspan="3" class="govuk-table__cell">
                                             <span class="govuk-!-font-size-14">Ingredient matches: </span>
