--- a/app/views/cosmetics-general/ingredients-cosmetic-products-search.html
+++ b/app/views/cosmetics-general/ingredients-cosmetic-products-search.html
@@ -316,7 +316,7 @@
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
-                        <p class="govuk-body">
+                        <p class="govuk-body-s">
                             9 cases matching keyword(s) 
                             <samp>
                                 <span class="govuk-!-font-weight-bold">Lorem, Consectetur, Etilee</span>,
