--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -252,6 +252,7 @@
                         <li>Date range filter to work as per the pre-existing cosmetics search (with same error messages, etc)</li>
                         <li>If more than one ingredient matches is found in a product, we list them all, even if repeated (as demonstrated the first record)</li>
                         <li>The search input would persist (as like the current cosmetics search), and show in the search input field when page returned results</li>
+                        <li>The page design shows filter 'Notification status': this is for future reference and won't be added to this page until we complete the 'Archive' epic</li>
                     </ol>                    
                 </li>
                 <li>
@@ -272,10 +273,12 @@
                     </ol>                     
                 </li> 
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="ingredients-ingredients-search-empty.html" target="_blank">Ingredients search (no results)</a> 
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredients-ingredients-search-grouped.html" target="_blank">Ingredients search (grouped by)</a> 
                     
                     <ol class="govuk-list govuk-list--number govuk-!-font-size-16">
-                        <li>When there are no results</li>
+                        <li>Using GROUP-BY (SQL)</li>
+                        <li>This page design demonstrates results grouped by Responsible Person (showing them grouped together)</li>
+                        <li>It all shows the potential to visually group the results with a CSS classes (added when looping through the parent GROUPED-BY results)</li>
                     </ol>                     
                 </li>                                                
             </ul> 
